Share Link refactored, changed to clickable div, a tag causing page jump issues

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/core/_tables.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/core/_tables.sass
@@ -1,5 +1,5 @@
 .g-table-master
-    @include px(3)
+    @include px(0)
     overflow-x: scroll
     &::-webkit-scrollbar-thumb
         background: $c-orange
