--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/elements/_f-share-link.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/elements/_f-share-link.sass
@@ -1,24 +1,35 @@
 .e-share-links
-    a  
+    a, div  
         @extend .fx
         span
             @include mx(1)
     .f-share-link
+        @extend a
         @include mr(3)
-        &.active
-            position: relative
+        cursor: pointer
+        @extend .fx
+        span
+            @include mx(1)
+        &:after 
+            z-index: 2
+            @include p(2)
+            background: $c-orange
+            bottom: 40px
+            left: 0%
+            width: 200px
+            border-radius: 5px
+            color: $c-white
+            position: absolute
+            display: block
+            content: attr(data-title)
+            opacity: 0
+            visibility: hidden
+            transition: all 200ms ease
+            text-align: left
+        &.triggered 
             &:after 
-                z-index: 1000
-                @include p(2)
-                background: $c-orange
-                top: 30px
-                left: -50%
-                width: 300px
-                border-radius: 5px
-                color: $c-white
-                position: absolute
-                display: block
-                content: attr(data-title)
+                opacity: 1
+                visibility: visible
 
 main
     .u-container 
